--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-al-folio
 title: Olga Sudareva
 description: Professional Website for Olga Sudareva
+url: https://www.olgasudareva.org
+baseurl: ""
